--- a/product-page/queries.css
+++ b/product-page/queries.css
@@ -1,570 +1,246 @@
-/* for screens smaller than 1440px */
-@media only screen and (max-width: 1439px) {
-    .categories-section .category {
-        width: 40.9vw;
+/* for large screen devices (desktops, laptops) */
+@media only screen and (min-width: 1180px) {
+    .bg-circle {
+        margin-left: 11rem;
     }
 }
-@media only screen and (max-width: 1289px) {
-    .carousel .slide-content {
-        margin: 0 1.5rem;
-    }
-    .goals-section {
-        padding-left: 8%;
-        padding-right: 8%;
-        width: 100%;
-    }
-}
-@media only screen and (max-width: 1253px) {
-    h1 {
-        max-width: 600px;
-    }
-    .categories-section .category {
-        width: 40.8vw;
-    }
+@media only screen and (min-width: 1230px) {
     .category img {
-        width: 250px;
-        margin-top: -3rem;
-    }
-    footer .footer-top {
-        padding-right: 0;
-    }
-    .footer-top .col-2,
-    .footer-top .col-3  {
-        margin-left: 0rem;
+        width: 18rem;
+        margin-top: -4rem;
     }
 }
-@media only screen and (max-width: 1206px) {
-    h1 {
-        max-width: 600px;
-    }
-    .categories-section .category {
-        width: 40.8vw;
-    }
-    .category img {
-        width: 250px;
-        margin-top: -3rem;
+@media only screen and (min-width: 1273px) {
+    .bg-circle {
+        width: 23rem;
+        height: 23rem;
+        margin-top: -20rem;
     }
     .goals-section .big-img {
-        width: 450px;
-        height: 450px;
+        width: 32rem;
+        height: 32rem;
     }
-    .goals-section .small-img {
-        width: 180px;
-        height: 180px;
-        top: -8rem;
+    .goals-section .light-text {
+        font-size: 1.4rem;
+        line-height: 2.5rem;
     }
-    .goals-section {
-        padding-bottom: 7rem;
+    .bottom-header .logo {
+        margin-right: 5rem;
+    }
+    .bottom-header .search-bar {
+        width: 46.7%;
     }
 }
-@media only screen and (max-width: 1176px) {
-    .goals-section .goals-text {
+@media only screen and (min-width: 1024px) and (max-height: 705px) {
+    .hero-content,
+    .hero-section .hero-text {
+        height: 68vh;
+    }
+    .category img {
         margin-top: -3rem;
     }
 }
-@media only screen and (max-width: 1161px) {
-    .footer-bottom {
-        width: 100%;
-        margin-left: 0;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
+@media only screen and (min-width: 1024px) and (max-height: 650px) {
+    .hero-section .service-features {
+        margin-top: -3.5rem;
     }
-    footer .copyright {
-        float: none;
+    .category img {
+        width: 13rem;
     }
-    .footer-bottom address {
-        width: 60%;
-    }
-    
 }
-@media only screen and (max-width: 1136px) {
-    .logo {
+@media only screen and (min-width: 1440px) and (min-height: 842px) {
+    html {
+        font-size: 18px;
+    }
+    .bottom-header .logo {
         margin-right: 0;
     }
-    .bottom-header .cart-details {
-        margin: 0;
-    }
-    .hero-section .service-features {
-        gap: 2vw;
-    }
-    .goals-section .big-img {
-        width: 400px;
-        height: 400px;
-    }
 }
-@media only screen and (max-width: 1118px) {
-    .categories-section .category {
-        width: 40.7vw;
+@media only screen and (min-width: 2560px) {
+    html {
+        font-size: 35px;
     }
-}
-@media only screen and (max-width: 1057px) {
-    .carousel .slide-content {
-        grid-template-columns: repeat(4, 1fr);
+    .header-socials a {
+        padding-top: .3rem;
     }
-    .carousel .product-card:last-of-type {
-        display: none;
+    .bottom-header .search-bar {
+        border-width: 2px;
     }
-}
-@media only screen and (max-width: 1046px) {
-    h1 {
-        font-size: 2.6rem;
-    }
-}
-@media only screen and (max-width: 1015px) {
-    .categories-section .category {
-        width: 40.5vw;
-    }
-    .category img {
-        width: 200px;
-        margin-top: -1rem;
-    } 
-}
-@media only screen and (max-width: 1007px) {
-    h1 {
-        font-size: 2.4rem;
-    }
-    .goals-section .goals-text {
-        margin-top: -5rem;
-    }
-    .category-page .banner-section h2 {
-        max-width: 70%;
-        line-height: 2.3rem;
-    }
-    .category-page .banner-section {
-        height: 30vh;
-    }
-}
-@media only screen and (max-width: 967px) {
-    .bottom-header, .top-header, nav ul, footer {
-        padding: 0 5%;
-    }
-    nav {
-        padding: 0 !important;
-    }
-    nav ul {
-        width: 100%;
-    }
-    .hero-section .hero-text {
-        padding-left: 5%;
-    }
-    h1 {
-        max-width: 400px;
+    .hero-section .feature .feature-img {
+        border-width: .3rem;
     }
     hr {
-        margin: 5rem 5vw 0;
+        height: 2px;
     }
-    .carousel {
-        padding: 0 1rem;
+    .btn-small {
+        font-size: .8rem;
     }
-    .carousel .slide-content {
-        margin: 0 .8rem;
-        width: 93%;
+}
+@media only screen and (min-width: 2560px) and (min-height: 1264px) {
+    .hero-section .hero-text,
+    .hero-content {
+        height: 30rem;
     }
-    .category-wrapper {
-        width: 90%;
+    .category img {
+        width: 13rem;
+        margin-top: -4rem;
+    }
+    .category button {
+        margin-top: 1.5rem;
     }
     .categories-section .category {
-        width: 48.5%;
+        padding-top: 1.5rem;
     }
-    .category:nth-of-type(1),
-    .category:nth-of-type(3) {
-        margin-right: 25px;
-    }
-    .goals-section {
-        padding-left: 5%;
-        padding-right: 5%;
-    }
-    .newsletter-section {
-        width: 90vw;
-    }
-    .footer-bottom {
-        padding-left: 3rem;
-    }
-}
-@media only screen and (max-width: 956px) {
-    .hero-section .feature .feature-img {
-        width: 100px;
-        height: 100px;
-    }
-    .hero-section .feature img {
-        width: 45px;
-    }
-    .hero-section .feature {
-        width: 11rem;
-    }
-    .hero-section .service-features {
-        margin-top: -60px;
-    }
-    .hero-section {
-        padding-bottom: 1rem;
-    }
-}
-@media only screen and (max-width: 939px) {
-    .category:nth-of-type(1),
-    .category:nth-of-type(3) {
-        margin-right: 20px;
-    }
-}
-@media only screen and (max-width: 920px) {
-    .hero-content img {
-        display: none;
-    }
-    .hero-content .hero-text {
-        width: 100%;
-        background-image: linear-gradient(rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.8)), url('/images/hero-bg.jpeg');
-        background-size: cover;
-        background-position: center;
-        text-align: center;
-    }
-    h1 {
-        max-width: 60%;
-        margin: 0rem auto;
-    }
-}
-@media only screen and (max-width: 890px) {
-    .goals-section {
-        padding-bottom: 9rem;
-    }
-}
-@media only screen and (max-width: 880px) {
-    .carousel .slide-content {
-        grid-template-columns: repeat(3, 1fr);
-        gap: 2%;
-    }
-    .carousel .product-card:nth-of-type(4) {
-        display: none;
-    }
-    .goals-section .big-img {
-        width: 350px;
-        height: 350px;
-    }
-    .goals-section .small-img {
-        width: 150px;
-        height: 150px;
-        top: -7rem;
+    .banner-section {
+        height: 70vh;
+        max-height: none;
     }
     .goals-section .light-text {
         font-size: 1.1rem;
-        margin-bottom: 0rem;
+        line-height: 2.1rem;
     }
-    .goals-section {
-        padding-bottom: 3rem;
+    .goals-section .small-img {
+        top: -11rem;
     }
-    .newsletter-section {
-        margin-top: 0;
+    .goals-section .big-img {
+        width: 28rem;
+        height: 28rem;
     }
-}
-@media only screen and (max-width: 869px) {
-    .hero-section .hero-text {
-        padding-top: 7rem;
+    .btn-continue {
+        margin-top: 1.3rem;
     }
-}
-@media only screen and (max-width: 847px) {
-    .category img {
-        width: 150px;
-        margin-top: 0rem;
-    }
-    .categories-section .category {
-        height: 28vh;
-    }
-}
-@media only screen and (max-width: 834px) {
-    .banner-section h2 {
-        padding: 0;
-        max-width: 600px;
-    }
-    .banner-section {
-        padding-top: 5rem;
-    }
-}
-@media only screen and (max-width: 808px) {
-    .footer-top .col-1 {
-        width: 100%;
-        display: flex;
-        height: max-content;
-        justify-content: space-between;
-        align-items: center;
-        margin-bottom: 2rem;
-    }
-    .footer-top .socials {
-        margin-top: 0;
-    }
-    .footer-bottom address {
-        width: 50%;
-    }
-}
-@media only screen and (max-width: 804px) {
-    .hero-section .service-features {
-        justify-content: space-between;
-        padding: 0 3%;
-    }
-    .hero-section .feature .feature-img {
-        width: 90px;
-        height: 90px;
-    }
-    .hero-section .feature img {
-        width: 40px;
-    }
-    .carousel .slide-content {
-        margin: 0 1rem;
-    }
-    .bg-circle {
-        position: static;
-        margin-top: -300px;
-        margin-left: 110px;
-    } 
-    
-}
-@media only screen and (max-width: 760px) {
-    .goals-images {
-        display: none;
-    }
-    .goals-text, .goals-section .light-text {
-        width: 100%;
-    }
-    .goals-section {
-        padding-bottom: 4rem;
-    }
-}
-@media only screen and (max-width: 774px) {
-    .bold {
-        font-size: .9rem;
-    }
-}
-@media only screen and (max-width: 742px) {
-    .categories-section .category {
-        width: 100%;
-        float: none;
-    }
-    .category-wrapper {
-        width: 90%;
-        height: max-content;
-        margin: 2rem auto 0;
-    }
-    .categories-section .category:nth-of-type(3) {
-        margin-bottom: 20px;
-    }
-}
-@media only screen and (max-width: 733px) {
-    .bottom-header, .top-header, nav ul {
-        padding: 0 3%;
-    }
-    .cart-details {
-        margin: 0;
-    }
-    .cart-details {
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        gap: 7px;
-    }
-    .cart-details i {
-        margin-left: 1rem;
+    .cart-details .cart-items {
+        height: 80%;
     }
     .cart-details .cart-items-card {
-        top: 18%;
-        right: 0;
-        width: 30%;
+        height: 45vh;
     }
-    .cart-items .item .prod-info {
-        text-align: center;
-    }
-    .hero-section .hero-text {
-        padding-left: 3%;
-    }
-    .carousel .slide-content {
-        grid-template-columns: repeat(2, 1fr);
-        gap: 5%;
-        /* background-color: pink; */
-    }
-    .carousel .product-card:nth-of-type(3) {
+}
+
+/* for non-desktop devices (to not display any content) */
+@media only screen and (max-width: 1023px) {
+    header, nav, main, footer {
         display: none;
     }
-}
-@media only screen and (max-width: 705px) {
-    .cart-items .item .prod-price {
-        font-size: .85rem;
-    }
-}
-@media only screen and (max-width: 690px) {
-    .top-header {
-        height: 70px;
-    }
-    .left-group {
-        width: 70%;
-        align-items: center;
-        justify-content: space-between;
-    }
-    .left-group .shipping-deal {
-        width: 50%;
-        text-align: center;
-    }
-    .cart-details .cart-items-card,
-    .cart-details p {
-        display: none;
-    }
-    .bottom-header .search-bar {
-        width: 44vw;
-    }
-    .cart-details {
-        margin: 0;
-    }
-    .newsletter-section {
-        height: 37vh;
-    }
-    .newsletter-section form {
-        width: 80%;
-    }
-}
-@media only screen and (max-width: 682px) {
-    .footer-bottom {
-        flex-direction: column;
-    }
-    .copyright {
-        margin-top: 3rem;
-    }
-    .footer-bottom address {
-        width: 100%;
-    }
-    .category-page .banner-section h2 {
-        max-width: 90%;
-    }
-}
-@media only screen and (max-width: 660px) {
-    .newsletter-section h2 {
-        font-size: 2.3rem;
-    }
-}
-@media only screen and (max-width: 649px) {
-    h1 {
-        max-width: 75%;
-    }
-}
-@media only screen and (max-width: 639px) {
-    .hero-section .feature {
-        width: 8rem;
-    }
-}
-@media only screen and (max-width: 603px) {
-    .hero-section .feature .feature-img {
-        width: 80px;
-        height: 80px;
-    }
-    .hero-section .service-features {
-        margin-top: -50px;
-    }
-    .hero-section .feature .feature-img {
-        margin-bottom: 13px;
-    }
-    .hero-section {
-        padding-bottom: 0rem;
-    }
-    .banner-section h2 {
-        font-size: 2.2rem;
-        max-width: 500px;
-    }
-    .banner-section {
-        margin: 0;
-        padding: 0;
-        height: 400px;
+    body {
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        /* overflow: hidden; */
     }
-    .categories-section {
-        margin-bottom: 3rem;
+    .non-desktop {
+        display: block;
     }
-    .category-page .banner-section {
-        padding-top: 2rem;
-    }
+    
 }
-@media only screen and (max-width: 590px) {
-    html {
-        font-size: 15px;
+@media only screen and (max-width: 912px) and (min-width: 768px) and (min-height: 1024px) {
+    .only-tablets {
+        display: block;
     }
-    .cart-details i {
-        display: none;
-    }
-    .bottom-header .search-bar {
-        margin-left: 1rem;
-    }
-    nav ul {
-        font-size: 1rem;
-    }
-    nav ul i {
-        margin-left: 1px;
-    }
-}
-@media only screen and (max-width: 581px) {
-    .newsletter-section {
-        margin-left: 0;
-        margin-right: 0;
-        width: 100%;
-    }
-    .newsletter-section form {
-        width: 90%;
-    }
-}
-@media only screen and (max-width: 557px) {
-    footer {
-        padding: 0 3%;
-    }
-}
-@media only screen and (max-width: 531px) {
-    footer p, footer li, footer h4 {
-        font-size: .9rem;
-    } 
-}
-@media only screen and (max-width: 524px) {
-    .left-group {
-        /* width: 70%; */
-        gap: 2rem;
-        /* background-color: pink; */
-    }
-}
-@media only screen and (max-width: 514px) {
-    .left-group {
+    body {
         gap: 1rem;
+    }
+}
+
+/* for surface duo; to avoid placing info in the center where it folds or hinges */
+@media only screen and (max-width: 720px) and (min-width: 720px) and (min-height: 1114px) {
+    .non-desktop {
+        margin-bottom: 35rem;
+    }
+}
+
+/* changing font-size of warning text for mobile devices */
+@media only screen and (max-width: 500px) {
+    html {
+        font-size: 14px;
+    }
+}
+@media only screen and (max-width: 360px) {
+    html {
+        font-size: 12px;
+    }
+}
+@media only screen and (max-width: 280px) {
+    html {
+        font-size: 10px;
     }
 }
    
 /* MEDIA QUERIES FOR PRODUCT PAGE */
-@media only screen and (max-width: 1330px) {
-    .category-page .products-display-section .products-grid {
-        padding-right: 2.5rem;
+@media only screen and (min-width: 1200px) {
+    .category-page .filters {
+        width: 15rem;
     }
-    .category-page .products-display-section .products-grid .row {
+    .category-page .filters .sidebar {
+        padding: 1.5rem 1.5rem;
+    }
+    .category-page .filters .type-1 .options div {
+        gap: .8rem;
+    }
+    .category-page .type-2 .dropdown {
+        padding: 0 5px;
+        font-size: .8rem;
+    }
+    .category-page .type-2 .dropdown select {
+        width: 90%;
+    }
+    .category-page .products-display-section .products-grid {
         gap: 2rem;
     }
-    .category-page .pagination nav ul {
-        width: 50%;
-        /* background-color: pink; */
+    .category-page .product-card {
+        min-width: 12rem;
     }
-    .category-page .pagination {
-        margin-left: 29vw;
+    .pagination {
+        width: 48rem;
+        margin-left: 28.6vw;
+        margin-top: 2rem;
     }
-}
-@media only screen and (max-width: 1158px) {
-    .category-page .pagination {
-        margin-left: 21rem;
-        /* background-color: pink; */
+    .pagination nav ul {
+        width: 45%;
     }
 }
-@media only screen and (max-width: 962px) {
-    .category-page .pagination {
-        margin-left: 21rem;
-        /* background-color: pink; */
-    }
-    .category-page .pagination nav ul {
-        width: 60%;
-        /* background-color: pink; */
+@media only screen and (min-width: 1300px) {
+    .category-page .products-display-section .products-grid {
+        padding: 1.85rem 7.5rem 1.8rem 2.5rem;
+        gap: 3.5rem;
     }
 }
-@media only screen and (max-width: 590px) {
-    html.page-2 {
-        font-size: 16px;
+@media only screen and (min-width: 1440px) {
+
+}
+@media only screen and (min-width: 1440px) and (min-height: 900px) {
+    input[type=range]::-webkit-slider-thumb {
+        margin-top: -4px;
+    }
+    .category-page .products-display-section .products-grid {
+        padding-right: 1rem;
+        gap: 2rem;
+    }
+    .category-page .circle:first-of-type {
+        top: 1.65rem;
+        left: -3px;
+    }
+}
+@media only screen and (min-width: 2560px) {
+    .category-page .products-display-section .header select {
+        background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" height="2.5em" viewBox="0 0 448 512"><path fill="%23d1d1d1" d="M201.4 342.6c12.5 12.5 32.8 12.5 45.3 0l160-160c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 274.7 86.6 137.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l160 160z"/></svg>');
+    }
+    .category-page .type-2 .dropdown select {
+        width: 70%;
+        -webkit-appearance: none;
+        -moz-appearance: none;
+        appearance: none;
+        background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" height="2em" viewBox="0 0 448 512"><path fill="black" d="M201.4 342.6c12.5 12.5 32.8 12.5 45.3 0l160-160c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 274.7 86.6 137.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l160 160z"/></svg>');
+        background-repeat: no-repeat;
+        background-position: right;
+    }
+    input[type=range]::-webkit-slider-thumb {
+        margin-top: -8px;
+    }
+    .category-page .circle:first-of-type {
+        left: -7px;
+    }
+    .category-page .circle {
+        border-width: 4px;
     }
 }
